book and media report content update Wed 08/18/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -57,6 +57,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1416342611l/34532.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1549393502l/43848929._SX318_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1579619025l/50849430._SX318_SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1319315857l/6405304.jpg" width="300" >
 </div>
 </body>
 </html>
