--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 08/17/2021 06:00<br>
+Completed books sorted by length - 08/18/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-383 books<br>
+384 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -384,7 +384,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 50 books - 509H 31M / 21D 5H 31M<br>
+Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -394,7 +394,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
+Book Reserve - Comic Trades - 116 books - 725H 47M / 30D 5H 47M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -404,20 +404,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 206 queued items: 2698H 42M / 112D 10H 42M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.62% of reserve items are queued<br>
  <br>
 All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
-Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
-Average completed per year: 44.4 titles - 497H 7M / 20D 17H 7M<br>
+Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
+Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
+Average completed per year: 44.5 titles - 497H 27M / 20D 17H 27M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:05..97 (5.97 seconds)<br>
-Total time including file writes: 00:00:05..97 (5.97 seconds)
+Total time to process all reports: 00:00:01.919 (1.919 seconds)<br>
+Total time including file writes: 00:00:01.919 (1.919 seconds)
 </div>
 </body>
 </html>
