--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,128 +7,127 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 08/17/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 08/18/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-117 books<br>
+116 books<br>
  <br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Absolute Carnage - 6H 13M<br>
-Batman vol 9 - 4H 43M<br>
-Deadpool v Gambit - 3H 29M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Batman 66 vol 3 - 5H 13M<br>
-Edge of Venomverse - 3H 29M<br>
-Saga vol 4 - 4H 28M<br>
-The Dark Knight Returns - 6H 58M<br>
-Darth Vader vol 3 - 3H 59M<br>
-DCeased - 6H 58M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Deadpool v Carnage - 3H 44M<br>
-Black Panther vol 1 - 4H 28M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Red Hood and the Outlaws vol 1 - 5H 13M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Thanos vol 1 - 4H 14M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Marvel Infinity - 18H 25M<br>
-Lumberjanes - 4H 6M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Superman vol 3 - 4H 28M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Saga vol 3 - 4H 28M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Mister Miracle - 9H 57M<br>
-Batman vol 8 - 5H 28M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Batman Damned - 5H 28M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
 Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-King in Black - 4H 28M<br>
-Detective Comics 1000 - 5H 28M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Super Sons vol 1 - 3H 59M<br>
-Bizarro - 4H 28M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Iron Man Extremis - 4H 58M<br>
-Black Panther vol 2 - 4H 28M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Justice League Darkseid War - 11H 42M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Saga vol 5 - 4H 43M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Future State Wonder Woman - 6H 13M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Action Comics 1000 - 4H 58M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Civil War II - 9H 12M<br>
-Batman The Doom That Came To Gotham - 5H 28M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Batman 66 vol 2 - 5H 28M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Pride of Baghdad - 4H 14M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-X-men Gold vol 1 - 4H 28M<br>
 Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Spider-man Spider Island - 11H 42M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Detective Comics 1000 - 5H 28M<br>
+Civil War II - 9H 12M<br>
 Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Deadpool too soon - 4H 14M<br>
-Spider-geddon - 6H 13M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Superman vol 4 - 5H 28M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Spider-Verse - 20H 10M<br>
-Deadpool, Vol. 1 Secret Invasion - 4H 14M<br>
-Saga vol 6 - 4H 43M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Batwoman vol 1 - 5H 13M<br>
-Spider-gwen vol 3 - 3H 29M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Future State Wonder Woman - 6H 13M<br>
 Venomverse - 3H 59M<br>
-Avengers vol 1 - 4H 58M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+King in Black - 4H 28M<br>
+Saga vol 5 - 4H 43M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Deadpool v Gambit - 3H 29M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Saga vol 3 - 4H 28M<br>
+Batman vol 9 - 4H 43M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
 Once & Future Vol. 1 - 4H 58M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Deadpool v Carnage - 3H 44M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Saga vol 6 - 4H 43M<br>
+Lumberjanes - 4H 6M<br>
+Spider-Verse - 20H 10M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Bizarro - 4H 28M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+Batman 66 vol 3 - 5H 13M<br>
+Black Panther vol 1 - 4H 28M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Black Panther vol 2 - 4H 28M<br>
+Iron Man Extremis - 4H 58M<br>
+Marvel Infinity - 18H 25M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Spider-man Spider Island - 11H 42M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Justice League Darkseid War - 11H 42M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Batman The Doom That Came To Gotham - 5H 28M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Batwoman vol 1 - 5H 13M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Thanos vol 1 - 4H 14M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Super Sons vol 1 - 3H 59M<br>
+Red Hood and the Outlaws vol 1 - 5H 13M<br>
+DCeased - 6H 58M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Superman vol 3 - 4H 28M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Pride of Baghdad - 4H 14M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Batman Damned - 5H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Edge of Venomverse - 3H 29M<br>
+Mister Miracle - 9H 57M<br>
+The Dark Knight Returns - 6H 58M<br>
+Absolute Carnage - 6H 13M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Avengers vol 1 - 4H 58M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Batman vol 8 - 5H 28M<br>
+Deadpool too soon - 4H 14M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Action Comics 1000 - 4H 58M<br>
+Saga vol 4 - 4H 28M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Superman vol 4 - 5H 28M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Spider-geddon - 6H 13M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -136,7 +135,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
 Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
-Completed in 2021 - 50 books - 509H 31M / 21D 5H 31M<br>
+Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -146,7 +145,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 117 books - 730H 1M / 30D 10H 1M<br>
+Book Reserve - Comic Trades - 116 books - 725H 47M / 30D 5H 47M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -156,20 +155,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 206 queued items: 2698H 42M / 112D 10H 42M<br>
 0 reserve titles are marked as high priority<br>
-25.59% of reserve items are queued<br>
+25.62% of reserve items are queued<br>
  <br>
 All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 383 titles - 4287H 19M / 178D 15H 19M<br>
-Total remaining in queue and reserve: 805 titles - 10004H 59M / 416D 20H 59M<br>
-Average completed per year: 44.4 titles - 497H 7M / 20D 17H 7M<br>
+Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
+Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
+Average completed per year: 44.5 titles - 497H 27M / 20D 17H 27M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:05..97 (5.97 seconds)<br>
-Total time including file writes: 00:00:05..97 (5.97 seconds)
+Total time to process all reports: 00:00:01.919 (1.919 seconds)<br>
+Total time including file writes: 00:00:01.919 (1.919 seconds)
 </div>
 </body>
 </html>
