book and media report content update Thu 08/19/2021

--- a/report/media/k_progress.html
+++ b/report/media/k_progress.html
@@ -3,7 +3,9 @@
 <head>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Media Tracker</title>
+    <title>
+Media Tracker - K
+</title>
 </head>
 <body>
 <div class="content">
