--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/19/2021 09:34<br>
+Reserved books sorted by length - 08/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 804 books<br>
@@ -346,7 +346,7 @@ The Hobbit - J.R.R. Tolkien - 11H 8M (Queue - Current Audiobooks)<br>
 Baby Teeth - Zoje Stage - 11H 9M (Book Reserve - Audiobooks)<br>
 Pern 2-01 - Dragonseye - 11H 9M (Book Reserve - Audiobooks)<br>
 Musicophilia - Oliver Sacks - 11H 10M (Queue - Current Audiobooks)<br>
-Patternist 1 - Wild Seed - Octavia E. Butler - 11H 12M (Queue - Audible Audiobooks)<br>
+Patternist 1 - Wild Seed - Octavia E. Butler - 11H 12M (Queue - Current Audiobooks)<br>
 Divergent 1 - Divergent - Veronica Roth - 11H 15M (Book Reserve - Audiobooks)<br>
 The Song of Achilles - Madeline Miller - 11H 18M (Queue - Current Audiobooks)<br>
 The Whole Art of Detection - Lyndsay Faye - 11H 18M (Queue - Current Audiobooks)<br>
@@ -389,7 +389,7 @@ The Skeptic's Guide to American History - Mark A. Stoler - 12H 1M (Queue - Audib
 Witcher 3 - Baptism of Fire - Andrzej Sapkowski - 12H 2M (Book Reserve - Audiobooks)<br>
 Call Sign Chaos - Jim Mattis - 12H 4M (Book Reserve - Audiobooks)<br>
 Earthseed 1 - Parable of the Sower - Octavia E. Butler - 12H 5M (Book Reserve - Audiobooks)<br>
-Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Audible Audiobooks)<br>
+Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Current Audiobooks)<br>
 Sphere - Michael Crichton - 12H 6M (Book Reserve - Audiobooks (Need new source))<br>
 Circe - Madeline Miller - 12H 11M (Queue - Current Audiobooks)<br>
 Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M (Book Reserve - Comic Trades)<br>
@@ -727,8 +727,8 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
-Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
+Queue - Current Audiobooks - 175 books - 2214H 54M / 92D 6H 54M<br>
+Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
@@ -757,12 +757,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
 Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
-Average completed per year: 44.5 titles - 497H 18M / 20D 17H 18M<br>
+Average completed per year: 44.5 titles - 497H 8M / 20D 17H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:03.136 (3.136 seconds)<br>
-Total time including file writes: 00:00:03.137 (3.137 seconds)
+Total time to process all reports: 00:00:02.253 (2.253 seconds)<br>
+Total time including file writes: 00:00:02.253 (2.253 seconds)
 </div>
 </body>
 </html>
