--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/19/2021 09:34<br>
+Reserved books sorted by name - 08/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 804 books<br>
@@ -274,7 +274,7 @@ Hainish Cycle 5 - City of Illusions - Ursula K. Le Guin - 7H 24M (Book Reserve -
 Hallucinations - Oliver Sacks - 9H 52M (Queue - Current Audiobooks)<br>
 Hand of Thrawn Duology 1 - Spectre of the Past - 14H 35M (Book Reserve - Audiobooks)<br>
 Hand of Thrawn Duology 2 - Vision of the Future - 26H 23M (Book Reserve - Audiobooks)<br>
-Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Audible Audiobooks)<br>
+Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Current Audiobooks)<br>
 Handmaid's Tale 2 - The Testaments - Margaret Atwood - 13H 21M (Book Reserve - Audiobooks)<br>
 Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M (Book Reserve - Comic Trades)<br>
 Haunted - Chuck Palahniuk - 13H 56M (Book Reserve - Audiobooks)<br>
@@ -409,7 +409,7 @@ Pale Rider - Laura Spinney - 10H 7M (Book Reserve - Audiobooks)<br>
 Paradise Lost - John Milton - 9H 13M (Book Reserve - Audiobooks)<br>
 Parasitology 1 - Parasite - Mira Grant - 16H 10M (Book Reserve - Audiobooks)<br>
 Parasitology 2 - Symbiont - Mira Grant - 16H 52M (Book Reserve - Audiobooks)<br>
-Patternist 1 - Wild Seed - Octavia E. Butler - 11H 12M (Queue - Audible Audiobooks)<br>
+Patternist 1 - Wild Seed - Octavia E. Butler - 11H 12M (Queue - Current Audiobooks)<br>
 Pern 1-01 - Dragonsdawn - 14H 9M (Queue - Current Audiobooks)<br>
 Pern 1-02 - The Chronicles of Pern - First Fall - 9H 14M (Book Reserve - Audiobooks)<br>
 Pern 2-01 - Dragonseye - 11H 9M (Book Reserve - Audiobooks)<br>
@@ -821,8 +821,8 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 173 books - 2191H 36M / 91D 7H 36M<br>
-Queue - Audible Audiobooks - 33 books - 507H 6M / 21D 3H 6M<br>
+Queue - Current Audiobooks - 175 books - 2214H 54M / 92D 6H 54M<br>
+Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
@@ -851,12 +851,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
 Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
-Average completed per year: 44.5 titles - 497H 18M / 20D 17H 18M<br>
+Average completed per year: 44.5 titles - 497H 8M / 20D 17H 8M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:03.136 (3.136 seconds)<br>
-Total time including file writes: 00:00:03.137 (3.137 seconds)
+Total time to process all reports: 00:00:02.253 (2.253 seconds)<br>
+Total time including file writes: 00:00:02.253 (2.253 seconds)
 </div>
 </body>
 </html>
