book and media report content update Fri 08/20/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/20/2021 06:00<br>
+Reserved books sorted by length - 08/20/2021 14:26<br>
 -----------------------------------------------------<br>
  <br>
 804 books<br>
@@ -443,6 +443,7 @@ The Dresden Files - Side Jobs - Jim Butcher - 13H 18M (Book Reserve - Audiobooks
 The Jungle - Upton Sinclair - 13H 21M (Book Reserve - Audiobooks)<br>
 A Confederacy of Dunces - John Kennedy Toole - 13H 21M (Book Reserve - Audiobooks)<br>
 Handmaid's Tale 2 - The Testaments - Margaret Atwood - 13H 21M (Book Reserve - Audiobooks)<br>
+Trejo - Danny Trejo - 13H 22M (Queue - Current Audiobooks)<br>
 Broken Earth 2 - The Obelisk Gate - N. K. Jemisin - 13H 23M (Queue - Current Audiobooks)<br>
 Thrawn 2 - Thrawn Alliances - Timothy Zahn - 13H 25M (Book Reserve - Audiobooks)<br>
 From a Buick 8 - Stephen King - 13H 28M (Book Reserve - Audiobooks)<br>
@@ -727,9 +728,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 175 books - 2214H 54M / 92D 6H 54M<br>
+Queue - Current Audiobooks - 176 books - 2228H 17M / 92D 20H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
+Completed in 2021 - 52 books - 518H 13M / 21D 14H 13M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -739,7 +740,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 116 books - 725H 47M / 30D 5H 47M<br>
+Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -747,22 +748,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2698H 42M / 112D 10H 42M<br>
+207 queued items: 2712H 5M / 113D 0H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.62% of reserve items are queued<br>
+25.75% of reserve items are queued<br>
  <br>
-All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1189 titles - 14305H 41M / 596D 1H 41M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
-Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
-Average completed per year: 44.5 titles - 497H 8M / 20D 17H 8M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
+Total remaining in queue and reserve: 804 titles - 10009H 39M / 417D 1H 39M<br>
+Average completed per year: 44.6 titles - 497H 39M / 20D 17H 39M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:02.253 (2.253 seconds)<br>
-Total time including file writes: 00:00:02.253 (2.253 seconds)
+Total time to process all reports: 00:00:10.0.1 (10.1 seconds)<br>
+Total time including file writes: 00:00:10.101 (10.101 seconds)
 </div>
 </body>
 </html>
