--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/20/2021 06:00<br>
+Reserved books sorted by folder - 08/20/2021 14:26<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 175 books - 2214H 54M / 92D 6H 54M<br>
+Queue - Current Audiobooks : 176 books - 2228H 17M / 92D 20H 17M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -168,6 +168,7 @@ The World of Ice & Fire - George R.R. Martin - 21H 28M<br>
 Thrawn 1 - Thrawn - Timothy Zahn - 17H 1M<br>
 Time Quartet 1 - A Wrinkle In Time - Madeleine L'engle - 6H 28M<br>
 Time Travel - A History - James Gleick - 10H 3M<br>
+Trejo - Danny Trejo - 13H 22M<br>
 Trick Mirror - Reflections on Self-Delusion - Jia Tolentino - 9H 48M<br>
 Ultralearning - Scott Young - 7H 48M<br>
 Until the End of Time - Brian Greene - 14H 40M<br>
@@ -243,8 +244,8 @@ The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 116 books - 725H 47M / 30D 5H 47M<br>
-Total Comic Trades : 116<br>
+Book Reserve - Comic Trades : 115 books - 721H 19M / 30D 1H 19M<br>
+Total Comic Trades : 115<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -307,7 +308,6 @@ Iron Man 2020 Robot Revolution - 4H 14M<br>
 Iron Man Extremis - 4H 58M<br>
 Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
 Justice League Darkseid War - 11H 42M<br>
-King in Black - 4H 28M<br>
 Lobo Portrait of a Bastich - 6H 28M<br>
 Lumberjanes - 4H 6M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
@@ -842,9 +842,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 175 books - 2214H 54M / 92D 6H 54M<br>
+Queue - Current Audiobooks - 176 books - 2228H 17M / 92D 20H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 51 books - 513H 45M / 21D 9H 45M<br>
+Completed in 2021 - 52 books - 518H 13M / 21D 14H 13M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -854,7 +854,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Comic Trades - 116 books - 725H 47M / 30D 5H 47M<br>
+Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
  <br>
@@ -862,22 +862,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-206 queued items: 2698H 42M / 112D 10H 42M<br>
+207 queued items: 2712H 5M / 113D 0H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.62% of reserve items are queued<br>
+25.75% of reserve items are queued<br>
  <br>
-All books included in this report: 1188 titles - 14292H 18M / 595D 12H 18M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1189 titles - 14305H 41M / 596D 1H 41M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 384 titles - 4291H 33M / 178D 19H 33M<br>
-Total remaining in queue and reserve: 804 titles - 10000H 45M / 416D 16H 45M<br>
-Average completed per year: 44.5 titles - 497H 8M / 20D 17H 8M<br>
-Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
+Total remaining in queue and reserve: 804 titles - 10009H 39M / 417D 1H 39M<br>
+Average completed per year: 44.6 titles - 497H 39M / 20D 17H 39M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:02.253 (2.253 seconds)<br>
-Total time including file writes: 00:00:02.253 (2.253 seconds)
+Total time to process all reports: 00:00:10.0.1 (10.1 seconds)<br>
+Total time including file writes: 00:00:10.101 (10.101 seconds)
 </div>
 </body>
 </html>
