book and media report content update Thu 08/26/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/26/2021 06:00<br>
+Reserved books sorted by folder - 08/26/2021 12:37<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 177 books - 2236H 41M / 93D 4H 41M<br>
@@ -243,6 +243,13 @@ The Future of Feeling - Building Empathy in a Tech-Obsessed World - Kaitlin Ugol
 The Raven Tower - Ann Leckie - 14H 26M<br>
 The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53M<br>
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
+-----------------------------------------------------<br>
+ <br>
+Book Reserve - Manga : 2 books - 11H 56M / 0D 11H 56M<br>
+Total Comic Trades : 2<br>
+ <br>
+Attack on Titan 29 - 5H 58M<br>
+Attack on Titan 30 - 5H 58M<br>
 -----------------------------------------------------<br>
  <br>
 Book Reserve - Comic Trades : 115 books - 721H 19M / 30D 1H 19M<br>
@@ -855,6 +862,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
+Book Reserve - Manga - 2 books - 11H 56M / 0D 11H 56M<br>
 Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
@@ -865,20 +873,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 208 queued items: 2720H 29M / 113D 8H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.84% of reserve items are queued<br>
+25.77% of reserve items are queued<br>
  <br>
-All books included in this report: 1190 titles - 14314H 5M / 596D 10H 5M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1192 titles - 14326H 1M / 596D 22H 1M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
-Total remaining in queue and reserve: 805 titles - 10018H 4M / 417D 10H 4M<br>
+Total remaining in queue and reserve: 807 titles - 10030H 0M / 417D 22H 0M<br>
 Average completed per year: 44.5 titles - 496H 42M / 20D 16H 42M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:02.066 (2.066 seconds)<br>
-Total time including file writes: 00:00:02.067 (2.067 seconds)
+Total time to process all reports: 00:00:03.843 (3.843 seconds)<br>
+Total time including file writes: 00:00:03.844 (3.844 seconds)
 </div>
 </body>
 </html>
