--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,126 +7,126 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 08/26/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 08/26/2021 12:37<br>
 -----------------------------------------------------<br>
  <br>
 115 books<br>
  <br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Batman The Doom That Came To Gotham - 5H 28M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Saga vol 3 - 4H 28M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Pride of Baghdad - 4H 14M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Black Panther vol 1 - 4H 28M<br>
-Detective Comics 1000 - 5H 28M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Iron Man Extremis - 4H 58M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Avengers vol 1 - 4H 58M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-The Dark Knight Returns - 6H 58M<br>
-Future State Wonder Woman - 6H 13M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-Batwoman vol 1 - 5H 13M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Lumberjanes - 4H 6M<br>
-Thanos vol 1 - 4H 14M<br>
-Saga vol 5 - 4H 43M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Deadpool v Carnage - 3H 44M<br>
 Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Batman Damned - 5H 28M<br>
-Black Panther vol 2 - 4H 28M<br>
-Marvel Infinity - 18H 25M<br>
-Saga vol 6 - 4H 43M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Edge of Venomverse - 3H 29M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Deadpool v Gambit - 3H 29M<br>
-Superman vol 3 - 4H 28M<br>
-Deadpool too soon - 4H 14M<br>
-Bizarro - 4H 28M<br>
-Civil War II - 9H 12M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Absolute Carnage - 6H 13M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Super Sons vol 1 - 3H 59M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Mister Miracle - 9H 57M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Superman vol 4 - 5H 28M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-DCeased - 6H 58M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Saga vol 4 - 4H 28M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Spider-man Spider Island - 11H 42M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
 Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Justice League Darkseid War - 11H 42M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Spider-Verse - 20H 10M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Iron Man Extremis - 4H 58M<br>
+Future State Wonder Woman - 6H 13M<br>
+Bizarro - 4H 28M<br>
+Batman The Doom That Came To Gotham - 5H 28M<br>
 X-men Gold vol 1 - 4H 28M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Venomverse - 3H 59M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Spider-geddon - 6H 13M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Batman vol 8 - 5H 28M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Batman 66 vol 3 - 5H 13M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Superman vol 4 - 5H 28M<br>
 Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Spider-man Spider Island - 11H 42M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
 Batman vol 9 - 4H 43M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
+Avengers vol 1 - 4H 58M<br>
+Spider-gwen vol 3 - 3H 29M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Action Comics 1000 - 4H 58M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
 Invincible Iron Man vol 1 - 4H 14M<br>
+Detective Comics 1000 - 5H 28M<br>
+Absolute Carnage - 6H 13M<br>
+Batwoman vol 1 - 5H 13M<br>
+Spider-Verse - 20H 10M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Justice League Darkseid War - 11H 42M<br>
+Spider-geddon - 6H 13M<br>
+Edge of Venomverse - 3H 29M<br>
 Spider-gwen vol 2 - 3H 29M<br>
+Lumberjanes - 4H 6M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Black Panther vol 2 - 4H 28M<br>
+Batman vol 8 - 5H 28M<br>
+Deadpool v Carnage - 3H 44M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Black Panther vol 1 - 4H 28M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Pride of Baghdad - 4H 14M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Saga vol 6 - 4H 43M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Batman 66 vol 3 - 5H 13M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Mister Miracle - 9H 57M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Thanos vol 1 - 4H 14M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Civil War II - 9H 12M<br>
+Deadpool v Gambit - 3H 29M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Marvel Infinity - 18H 25M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Action Comics 1000 - 4H 58M<br>
+Venomverse - 3H 59M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+DCeased - 6H 58M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Saga vol 4 - 4H 28M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+Superman vol 3 - 4H 28M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Saga vol 5 - 4H 43M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Saga vol 3 - 4H 28M<br>
+Super Sons vol 1 - 3H 59M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Deadpool too soon - 4H 14M<br>
+Batman Damned - 5H 28M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+The Dark Knight Returns - 6H 58M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Darth Vader vol 3 - 3H 59M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -144,6 +144,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
+Book Reserve - Manga - 2 books - 11H 56M / 0D 11H 56M<br>
 Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
@@ -154,20 +155,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 208 queued items: 2720H 29M / 113D 8H 29M<br>
 0 reserve titles are marked as high priority<br>
-25.84% of reserve items are queued<br>
+25.77% of reserve items are queued<br>
  <br>
-All books included in this report: 1190 titles - 14314H 5M / 596D 10H 5M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1192 titles - 14326H 1M / 596D 22H 1M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 385 titles - 4296H 1M / 179D 0H 1M<br>
-Total remaining in queue and reserve: 805 titles - 10018H 4M / 417D 10H 4M<br>
+Total remaining in queue and reserve: 807 titles - 10030H 0M / 417D 22H 0M<br>
 Average completed per year: 44.5 titles - 496H 42M / 20D 16H 42M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:02.066 (2.066 seconds)<br>
-Total time including file writes: 00:00:02.067 (2.067 seconds)
+Total time to process all reports: 00:00:03.843 (3.843 seconds)<br>
+Total time including file writes: 00:00:03.844 (3.844 seconds)
 </div>
 </body>
 </html>
