book and media report content update Wed 09/01/2021

--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 08/31/2021 06:00<br>
+Reserved books sorted by folder - 09/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 177 books - 2236H 41M / 93D 4H 41M<br>
+Queue - Current Audiobooks : 179 books - 2255H 45M / 93D 23H 45M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -115,6 +115,7 @@ Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M<br>
 Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M<br>
 Talking Across the Divide - Justin Lee - 6H 4M<br>
 Teixcalaan 1 - A Memory Called Empire - Arkady Martine - 15H 41M<br>
+Thank You for Arguing - Jay Heinrichs - 14H 38M<br>
 Thank You for Being Late - Thomas L. Friedman - 19H 53M<br>
 The Answer Is - Alex Trebek - 4H 37M<br>
 The Anthropocene Reviewed - John Green - 10H 6M<br>
@@ -143,6 +144,7 @@ The Laws of Human Nature - Robert Greene - 28H 34M<br>
 The Lies of Locke Lamora - Scott Lynch - 22H 2M<br>
 The Long Walk - Stephen King - 10H 47M<br>
 The Meaning of It All - Richard P. Feynman - 2H 51M<br>
+The Meditations - Marcus Aurelius - 4H 25M<br>
 The Millionaire Next Door - Thomas J. Stanley - 8H 52M<br>
 The Mind's Eye - Oliver Sacks - 8H 47M<br>
 The Moment of Lift - Melinda Gates - 7H 58M<br>
@@ -853,7 +855,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 177 books - 2236H 41M / 93D 4H 41M<br>
+Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -874,22 +876,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-208 queued items: 2720H 29M / 113D 8H 29M<br>
+210 queued items: 2739H 33M / 114D 3H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1196 titles - 14351H 53M / 597D 23H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 810 titles - 10049H 54M / 418D 17H 54M<br>
-Average completed per year: 44.6 titles - 496H 37M / 20D 16H 37M<br>
+Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
+Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:06.454 (6.454 seconds)<br>
-Total time including file writes: 00:00:06.454 (6.454 seconds)
+Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
+Total time including file writes: 00:00:03.187 (3.187 seconds)
 </div>
 </body>
 </html>
