--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 08/31/2021 06:00<br>
+Reserved books sorted by length - 09/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-810 books<br>
+812 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -55,6 +55,7 @@ Stamped--Racism, Antiracism, and You - Jason Reynolds - Ibram X. Kendi - 4H 12M 
 Doctor Who - Dark Eyes 2 (Eighth Doctor) - 4H 13M (Book Reserve - Audiobooks)<br>
 Wolverine - Black, White & Blood Treasury Edition - 4H 14M (Book Reserve - Comic Trades)<br>
 Pern 6-02 - Nerilka's Story - 4H 20M (Book Reserve - Audiobooks)<br>
+The Meditations - Marcus Aurelius - 4H 25M (Queue - Current Audiobooks)<br>
 Murderbot Diaries 6 - Fugitive Telemetry - Martha Wells - 4H 25M (Queue - Current Audiobooks)<br>
 X-men Gold vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 The Man Who Folded Himself - David Gerrold - 4H 29M (Book Reserve - Audiobooks)<br>
@@ -492,6 +493,7 @@ It Can't Happen Here - Sinclair Lewis - 14H 32M (Book Reserve - Audiobooks)<br>
 Memory - Lois McMaster Bujold - 14H 34M (Book Reserve - Audiobooks)<br>
 Hand of Thrawn Duology 1 - Spectre of the Past - 14H 35M (Book Reserve - Audiobooks)<br>
 Dracula - Bram Stoker - 14H 36M (Book Reserve - Audiobooks)<br>
+Thank You for Arguing - Jay Heinrichs - 14H 38M (Queue - Current Audiobooks)<br>
 The Dresden Files 11 - Turn Coat - Jim Butcher - 14H 39M (Queue - Current Audiobooks)<br>
 Shannara 22 The Gypsy Morph (Genesis of Shannara #3) - 14H 39M (Book Reserve - Audiobooks)<br>
 Until the End of Time - Brian Greene - 14H 40M (Queue - Current Audiobooks)<br>
@@ -730,7 +732,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 177 books - 2236H 41M / 93D 4H 41M<br>
+Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -751,22 +753,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-208 queued items: 2720H 29M / 113D 8H 29M<br>
+210 queued items: 2739H 33M / 114D 3H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1196 titles - 14351H 53M / 597D 23H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 810 titles - 10049H 54M / 418D 17H 54M<br>
-Average completed per year: 44.6 titles - 496H 37M / 20D 16H 37M<br>
+Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
+Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:06.454 (6.454 seconds)<br>
-Total time including file writes: 00:00:06.454 (6.454 seconds)
+Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
+Total time including file writes: 00:00:03.187 (3.187 seconds)
 </div>
 </body>
 </html>
