--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 08/31/2021 06:00<br>
+Reserved books sorted by name - 09/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-810 books<br>
+812 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -538,6 +538,7 @@ Talking Across the Divide - Justin Lee - 6H 4M (Queue - Current Audiobooks)<br>
 Teen Titans by Geoff Johns Book One - 11H 27M (Book Reserve - Comic Trades)<br>
 Teixcalaan 1 - A Memory Called Empire - Arkady Martine - 15H 41M (Queue - Current Audiobooks)<br>
 Thank You For Voting - Erin Geiger Smith - 6H 5M (Book Reserve - Audiobooks)<br>
+Thank You for Arguing - Jay Heinrichs - 14H 38M (Queue - Current Audiobooks)<br>
 Thank You for Being Late - Thomas L. Friedman - 19H 53M (Queue - Current Audiobooks)<br>
 Thanos vol 1 - 4H 14M (Book Reserve - Comic Trades)<br>
 That Used to Be Us - How America Fell Behind in the World It Invented and How We Can Come Back - Thomas L. Friedman - 16H 57M (Book Reserve - Audiobooks)<br>
@@ -647,6 +648,7 @@ The Many-Colored Land - Julian May - 16H 6M (Book Reserve - Audiobooks)<br>
 The Martian - Andy Weir - 10H 59M (Queue - Audible Audiobooks)<br>
 The Martian Chronicles - Ray Bradbury - 9H 18M (Book Reserve - Audiobooks)<br>
 The Meaning of It All - Richard P. Feynman - 2H 51M (Queue - Current Audiobooks)<br>
+The Meditations - Marcus Aurelius - 4H 25M (Queue - Current Audiobooks)<br>
 The Millionaire Next Door - Thomas J. Stanley - 8H 52M (Queue - Current Audiobooks)<br>
 The Mind's Eye - Oliver Sacks - 8H 47M (Queue - Current Audiobooks)<br>
 The Mist - Stephen King - 5H 21M (Book Reserve - Audiobooks)<br>
@@ -827,7 +829,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 177 books - 2236H 41M / 93D 4H 41M<br>
+Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -848,22 +850,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-208 queued items: 2720H 29M / 113D 8H 29M<br>
+210 queued items: 2739H 33M / 114D 3H 33M<br>
 0 reserve titles are marked as high priority<br>
-25.68% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1196 titles - 14351H 53M / 597D 23H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 810 titles - 10049H 54M / 418D 17H 54M<br>
-Average completed per year: 44.6 titles - 496H 37M / 20D 16H 37M<br>
+Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
+Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
 Remaining years of reserve material at current year pace: 10.3<br>
  <br>
-Total time to process all reports: 00:00:06.454 (6.454 seconds)<br>
-Total time including file writes: 00:00:06.454 (6.454 seconds)
+Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
+Total time including file writes: 00:00:03.187 (3.187 seconds)
 </div>
 </body>
 </html>
