book and media report content update Wed 09/01/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -60,6 +60,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1319315857l/6405304.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1625179418l/54768428._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1562087239l/44300262._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1574377004l/51065933._SX318_SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
