--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 09/01/2021 06:00<br>
+Completed books sorted by length - 09/01/2021 16:04<br>
 -----------------------------------------------------<br>
  <br>
-386 books<br>
+387 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -382,9 +382,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
+Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
+Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -394,31 +394,31 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 5 books - 31H 50M / 1D 7H 50M<br>
+Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
 Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
+Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2739H 33M / 114D 3H 33M<br>
+210 queued items: 2738H 44M / 114D 2H 44M<br>
 0 reserve titles are marked as high priority<br>
-25.86% of reserve items are queued<br>
+25.8% of reserve items are queued<br>
  <br>
-All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
-Records not found in the lookup file: 2<br>
+All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
-Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
+Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
+Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
+Average completed per year: 44.7 titles - 497H 9M / 20D 17H 9M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
-Total time including file writes: 00:00:03.187 (3.187 seconds)
+Total time to process all reports: 00:00:04..14 (4.14 seconds)<br>
+Total time including file writes: 00:00:04..14 (4.14 seconds)
 </div>
 </body>
 </html>
