--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/01/2021 06:00<br>
+Reserved books sorted by length - 09/01/2021 16:04<br>
 -----------------------------------------------------<br>
  <br>
-812 books<br>
+814 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -139,6 +139,7 @@ Artemis Fowl 3 - The Eternity Code - 6H 56M (Book Reserve - Audiobooks)<br>
 Prisoner of Our Thoughts - Berrett Koehler - 6H 56M (Book Reserve - Audiobooks)<br>
 The War on Normal People - Andrew Yang - 6H 56M (Book Reserve - Audiobooks)<br>
 The Dark Knight Returns - 6H 58M (Book Reserve - Comic Trades)<br>
+All Quiet on the Western Front - Erich Maria Remarque - 6H 59M (Book Reserve - Audiobooks)<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M (Book Reserve - Audiobooks (Need new source))<br>
 David and Goliath - Malcolm Gladwell - 7H 2M (Queue - Current Audiobooks)<br>
 2061 - Arthur C. Clarke - 7H 2M (Book Reserve - Audiobooks)<br>
@@ -146,7 +147,7 @@ David and Goliath - Malcolm Gladwell - 7H 2M (Queue - Current Audiobooks)<br>
 Protector (Known Space) - Larry Niven - 7H 5M (Book Reserve - Audiobooks)<br>
 What Unites Us - Dan Rather - 7H 7M (Book Reserve - Audiobooks)<br>
 Too Much and Never Enough - Mary L. Trump - 7H 7M (Book Reserve - Audiobooks)<br>
-The Adventures of Tom Sawyer - Mark Twain - 7H 7M (Book Reserve - Audiobooks)<br>
+The Chrysalids - John Wyndham - 7H 7M (Book Reserve - Audiobooks (Need new source))<br>
 UBIK - Philip K Dick - 7H 9M (Book Reserve - Audiobooks)<br>
 Pern 9-03 - Dragonsong - 7H 11M (Book Reserve - Audiobooks)<br>
 Berserker 4 - Berserker Man - 7H 12M (Book Reserve - Audiobooks)<br>
@@ -169,6 +170,7 @@ Artemis Fowl 4 - The Opal Deception - 7H 31M (Book Reserve - Audiobooks)<br>
 The Three Stigmata of Palmer Eldritch - Philip K. Dick - 7H 32M (Book Reserve - Audiobooks)<br>
 No Country for Old Men - Cormac McCarthy - 7H 33M (Book Reserve - Audiobooks)<br>
 Lock In 2 - Head On - John Scalzi - 7H 36M (Queue - Audible Audiobooks)<br>
+The Adventures of Tom Sawyer - Mark Twain - 7H 38M (Book Reserve - Audiobooks)<br>
 A Time of Changes - Robert Silverberg - 7H 39M (Book Reserve - Audiobooks)<br>
 Artemis Fowl 7 - The Atlantis Complex - 7H 40M (Book Reserve - Audiobooks)<br>
 Artemis Fowl 8 - The Last Guardian - 7H 41M (Book Reserve - Audiobooks)<br>
@@ -301,6 +303,7 @@ The Anthropocene Reviewed - John Green - 10H 6M (Queue - Current Audiobooks)<br>
 Checkpoint Charlie - Iain MacGregor - 10H 6M (Book Reserve - Audiobooks)<br>
 The Andromeda Evolution - Michael Crichton - 10H 7M (Book Reserve - Audiobooks)<br>
 Pale Rider - Laura Spinney - 10H 7M (Book Reserve - Audiobooks)<br>
+The Scarlet Letter - Nathaniel Hawthorne - 10H 10M (Book Reserve - Audiobooks)<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M (Book Reserve - Audiobooks)<br>
 Discworld 25 - The Truth - 10H 11M (Book Reserve - Audiobooks)<br>
 Dark Matter - Blake Crouch - 10H 11M (Queue - Current Audiobooks)<br>
@@ -351,6 +354,7 @@ Pern 2-01 - Dragonseye - 11H 9M (Book Reserve - Audiobooks)<br>
 Musicophilia - Oliver Sacks - 11H 10M (Queue - Current Audiobooks)<br>
 Patternist 1 - Wild Seed - Octavia E. Butler - 11H 12M (Queue - Current Audiobooks)<br>
 Divergent 1 - Divergent - Veronica Roth - 11H 15M (Book Reserve - Audiobooks)<br>
+Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 11H 16M (Queue - Current Audiobooks)<br>
 The Song of Achilles - Madeline Miller - 11H 18M (Queue - Current Audiobooks)<br>
 The Whole Art of Detection - Lyndsay Faye - 11H 18M (Queue - Current Audiobooks)<br>
 Lunar Chronicles 2 - Scarlet - Marissa Meyer - 11H 23M (Book Reserve - Audiobooks)<br>
@@ -392,7 +396,6 @@ The Skeptic's Guide to American History - Mark A. Stoler - 12H 1M (Queue - Audib
 Witcher 3 - Baptism of Fire - Andrzej Sapkowski - 12H 2M (Book Reserve - Audiobooks)<br>
 Call Sign Chaos - Jim Mattis - 12H 4M (Book Reserve - Audiobooks)<br>
 Earthseed 1 - Parable of the Sower - Octavia E. Butler - 12H 5M (Book Reserve - Audiobooks)<br>
-Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M (Queue - Current Audiobooks)<br>
 Sphere - Michael Crichton - 12H 6M (Book Reserve - Audiobooks (Need new source))<br>
 Circe - Madeline Miller - 12H 11M (Queue - Current Audiobooks)<br>
 Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M (Book Reserve - Comic Trades)<br>
@@ -406,6 +409,7 @@ Arguing with Zombies - Paul Krugman - 12H 18M (Queue - Current Audiobooks)<br>
 The Road to Character - David Brooks - 12H 20M (Queue - Current Audiobooks)<br>
 Shannara 17 Jarka Ruus (High Druid of Shannara, #1) - 12H 23M (Book Reserve - Audiobooks)<br>
 Fear - Bob Woodward - 12H 23M (Book Reserve - Audiobooks)<br>
+Pride and Prejudice - Jane Austen - 12H 24M (Book Reserve - Audiobooks)<br>
 The Ten Thousand Doors of January - Alix E. Harrow - 12H 24M (Queue - Current Audiobooks)<br>
 The Future of Humanity - Michio Kaku - 12H 25M (Book Reserve - Audiobooks)<br>
 Embassytown - China Mieville - 12H 26M (Book Reserve - Audiobooks)<br>
@@ -492,7 +496,6 @@ Caste (Oprah's Book Club) - Isabel Wilkerson - 14H 30M (Book Reserve - Audiobook
 It Can't Happen Here - Sinclair Lewis - 14H 32M (Book Reserve - Audiobooks)<br>
 Memory - Lois McMaster Bujold - 14H 34M (Book Reserve - Audiobooks)<br>
 Hand of Thrawn Duology 1 - Spectre of the Past - 14H 35M (Book Reserve - Audiobooks)<br>
-Dracula - Bram Stoker - 14H 36M (Book Reserve - Audiobooks)<br>
 Thank You for Arguing - Jay Heinrichs - 14H 38M (Queue - Current Audiobooks)<br>
 The Dresden Files 11 - Turn Coat - Jim Butcher - 14H 39M (Queue - Current Audiobooks)<br>
 Shannara 22 The Gypsy Morph (Genesis of Shannara #3) - 14H 39M (Book Reserve - Audiobooks)<br>
@@ -593,6 +596,7 @@ Silo 2 - Shift (1-3) - Hugh Howey - 18H 22M (Queue - Audible Audiobooks)<br>
 Marvel Infinity - 18H 25M (Book Reserve - Comic Trades)<br>
 The Diamond Age - Neal Stephenson - 18H 32M (Queue - Audible Audiobooks)<br>
 Inkheart 2 - Inkspell - Cornelia Funke - 18H 33M (Book Reserve - Audiobooks)<br>
+Dracula - Bram Stoker - 18H 36M (Book Reserve - Audiobooks)<br>
 The Starless Sea - Erin Morgenstern - 18H 42M (Book Reserve - Audiobooks)<br>
 Upheaval - Jared Diamond - 18H 44M (Queue - Audible Audiobooks)<br>
 Oxford 1 - Blackout - Connie Willis - 18H 44M (Book Reserve - Audiobooks)<br>
@@ -732,9 +736,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
+Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
+Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -744,31 +748,31 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 5 books - 31H 50M / 1D 7H 50M<br>
+Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
 Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
+Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2739H 33M / 114D 3H 33M<br>
+210 queued items: 2738H 44M / 114D 2H 44M<br>
 0 reserve titles are marked as high priority<br>
-25.86% of reserve items are queued<br>
+25.8% of reserve items are queued<br>
  <br>
-All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
-Records not found in the lookup file: 2<br>
+All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
-Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
+Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
+Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
+Average completed per year: 44.7 titles - 497H 9M / 20D 17H 9M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
-Total time including file writes: 00:00:03.187 (3.187 seconds)
+Total time to process all reports: 00:00:04..14 (4.14 seconds)<br>
+Total time including file writes: 00:00:04..14 (4.14 seconds)
 </div>
 </body>
 </html>
