--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/01/2021 06:00<br>
+Reserved books sorted by folder - 09/01/2021 16:04<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 179 books - 2255H 45M / 93D 23H 45M<br>
+Queue - Current Audiobooks : 179 books - 2254H 56M / 93D 22H 56M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -59,7 +59,7 @@ Go Tell It On the Mountain - James Baldwin - 8H 47M<br>
 Good Economics for Hard Times - James Lurie - 14H 49M<br>
 Hainish Cycle 1 - The Dispossessed - Ursula K. Le Guin - 13H 29M<br>
 Hallucinations - Oliver Sacks - 9H 52M<br>
-Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 12H 6M<br>
+Handmaid's Tale 1 - The Handmaid's Tale - Margaret Atwood - 11H 16M<br>
 Hot, Flat, and Crowded - Thomas L. Friedman - 20H 38M<br>
 How Democracies Die - Steven Levitsky - 8H 27M<br>
 How to Avoid a Climate Disaster - Bill Gates - 7H 13M<br>
@@ -247,10 +247,9 @@ The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Manga : 5 books - 31H 50M / 1D 7H 50M<br>
-Total Comic Trades : 5<br>
+Book Reserve - Manga : 4 books - 25H 52M / 1D 1H 52M<br>
+Total Comic Trades : 4<br>
  <br>
-Attack on Titan 30 - 5H 58M<br>
 Attack on Titan 31 - 5H 58M<br>
 Attack on Titan 32 - 5H 58M<br>
 Attack on Titan 33 - 5H 58M<br>
@@ -405,7 +404,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 443 books - 6028H 55M / 251D 4H 55M<br>
+Book Reserve - Audiobooks : 446 books - 6063H 0M / 252D 15H 0M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -426,6 +425,7 @@ A Wrinkle in Time - Madelein L'Engle - 6H 6M<br>
 Accessory to War - Neil DeGrasse Tyson - 18H 44M<br>
 Accidental Presidents - Eight Men Who Changed America - Jared Cohen - 17H 2M<br>
 Agency - William Gibson - 10H 15M<br>
+All Quiet on the Western Front - Erich Maria Remarque - 6H 59M<br>
 Alvin Maker 1 - Seventh Son - Orson Scott Card - 9H 8M<br>
 Alvin Maker 2 - Red Prophet - Orson Scott Card - 12H 14M<br>
 Alvin Maker 3 - Prentice Alvin - Orson Scott Card - 13H 52M<br>
@@ -513,7 +513,7 @@ Doctor Sleep - Stephen King - 17H 43M<br>
 Doctor Who - Dark Eyes (Eighth Doctor) - 3H 40M<br>
 Doctor Who - Dark Eyes 2 (Eighth Doctor) - 4H 13M<br>
 Double Star - Robert A. Heinlein - 6H 16M<br>
-Dracula - Bram Stoker - 14H 36M<br>
+Dracula - Bram Stoker - 18H 36M<br>
 Dune 5 - Heretics of Dune  - Frank Herbert - 18H 9M<br>
 Dune 6 - Chapterhouse Dune  - Frank Herbert - 16H 47M<br>
 Dying of the Light - George R.R. Martin - 11H 43M<br>
@@ -651,6 +651,7 @@ Poppy War 1 - The Poppy War - R. F. Kuang - 19H 2M<br>
 Poppy War 2 - The Dragon Republic - R. F. Kuang - 23H 52M<br>
 Presidents of War - Michael Beschloss - 26H 11M<br>
 Prey - Michael Crichton - 5H 45M<br>
+Pride and Prejudice - Jane Austen - 12H 24M<br>
 Prisoner of Our Thoughts - Berrett Koehler - 6H 56M<br>
 Protector (Known Space) - Larry Niven - 7H 5M<br>
 Quicksilver - Neal Stephenson - 22H 6M<br>
@@ -692,7 +693,7 @@ Takeshi Kovacs 3 - Woken Furies - Richard Morgan - 22H 6M<br>
 Thank You For Voting - Erin Geiger Smith - 6H 5M<br>
 That Used to Be Us - How America Fell Behind in the World It Invented and How We Can Come Back - Thomas L. Friedman - 16H 57M<br>
 The Adventures of Huckleberry Finn - Mark Twain - 11H 36M<br>
-The Adventures of Tom Sawyer - Mark Twain - 7H 7M<br>
+The Adventures of Tom Sawyer - Mark Twain - 7H 38M<br>
 The Age of Surveillance Capitalism - Shoshana Zuboff - 24H 23M<br>
 The Andromeda Evolution - Michael Crichton - 10H 7M<br>
 The Annals Of Kings And Rulers - J.R.R. Tolkien - 2H 56M<br>
@@ -772,6 +773,7 @@ The Rise of Skywalker - Rae Carson - 9H 39M<br>
 The Room Where It Happened - John Bolton - 20H 58M<br>
 The Rules of Contagion - Adam Kucharski - 8H 50M<br>
 The Running Man - Stephen King - 7H 43M<br>
+The Scarlet Letter - Nathaniel Hawthorne - 10H 10M<br>
 The Selected Stories of Philip K. Dick, Volume 1 - 7H 51M<br>
 The Selected Stories of Philip K. Dick, Volume 2 - 8H 8M<br>
 The Stand - Stephen King - 48H 1M<br>
@@ -855,9 +857,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2255H 45M / 93D 23H 45M<br>
+Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 53 books - 524H 11M / 21D 20H 11M<br>
+Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -867,31 +869,31 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 5 books - 31H 50M / 1D 7H 50M<br>
+Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
 Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 443 books - 6028H 55M / 251D 4H 55M<br>
+Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2739H 33M / 114D 3H 33M<br>
+210 queued items: 2738H 44M / 114D 2H 44M<br>
 0 reserve titles are marked as high priority<br>
-25.86% of reserve items are queued<br>
+25.8% of reserve items are queued<br>
  <br>
-All books included in this report: 1198 titles - 14370H 57M / 598D 18H 57M<br>
-Records not found in the lookup file: 2<br>
+All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 386 titles - 4301H 59M / 179D 5H 59M<br>
-Total remaining in queue and reserve: 812 titles - 10068H 57M / 419D 12H 57M<br>
-Average completed per year: 44.5 titles - 496H 27M / 20D 16H 27M<br>
+Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
+Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
+Average completed per year: 44.7 titles - 497H 9M / 20D 17H 9M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:03.186 (3.186 seconds)<br>
-Total time including file writes: 00:00:03.187 (3.187 seconds)
+Total time to process all reports: 00:00:04..14 (4.14 seconds)<br>
+Total time including file writes: 00:00:04..14 (4.14 seconds)
 </div>
 </body>
 </html>
