book and media report content update Fri 09/03/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/01/2021 16:04<br>
+Completed books sorted by name - 09/03/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 387 books<br>
@@ -430,17 +430,17 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 25.8% of reserve items are queued<br>
  <br>
 All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
 Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.7 titles - 497H 9M / 20D 17H 9M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
+Average completed per year: 44.6 titles - 496H 50M / 20D 16H 50M<br>
+Remaining years of reserve material at average yearly pace: 18.3<br>
 Remaining years of reserve material at current year pace: 10.2<br>
  <br>
-Total time to process all reports: 00:00:04..14 (4.14 seconds)<br>
-Total time including file writes: 00:00:04..14 (4.14 seconds)
+Total time to process all reports: 00:00:02.126 (2.126 seconds)<br>
+Total time including file writes: 00:00:02.127 (2.127 seconds)
 </div>
 </body>
 </html>
