--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-09-01<br>
+Progress bars collected from from brandonsanderson.com on 2021-09-03<br>
 <br>
-Cytonic 2nd Proofread 100%<br>
+Cytonic Final Proofread 100%<br>
 <br>
 Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 40%<br>
 <br>
