book and media report content update Tue 09/07/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/06/2021 06:00<br>
+Reserved books sorted by length - 09/07/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-814 books<br>
+816 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -67,6 +67,7 @@ Transformers All Hail Megatron Volume 2 - 4H 43M (Book Reserve - Comic Trades)<b
 A Study in Scarlet - Sir Arthur Conan Doyle - 4H 46M (Book Reserve - Audiobooks)<br>
 Man's Search for Meaning - Viktor E. Frankl - 4H 46M (Queue - Current Audiobooks)<br>
 The Fall of the House of Usher and other tales - Edgar Allan Poe - 4H 53M (Book Reserve - Audiobooks)<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M (Book Reserve - Comic Trades)<br>
 White Sand vol 2 - Brandon Sanderson - 4H 58M (Book Reserve - Comic Trades)<br>
 Notorious RBG - Irin Carmon - 5H 11M (Queue - Current Audiobooks)<br>
 Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M (Book Reserve - Comic Trades)<br>
@@ -85,7 +86,7 @@ Time Quartet 2 - A Wind in the Door - Madeleine L'engle - 5H 29M (Book Reserve -
 The God Equation - Michio Kaku - 5H 32M (Book Reserve - Audiobooks)<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M (Queue - Current Audiobooks)<br>
 Diana and the Underworld Odyssey - Aisha Saeed - 5H 36M (Queue - Current Audiobooks)<br>
-Atomic Habits - James Clear - 5H 36M (Book Reserve - Audiobooks)<br>
+Atomic Habits - James Clear - 5H 36M (Queue - Current Audiobooks)<br>
 Raising Good Humans - Carla Naumburg - 5H 38M (Queue - Current Audiobooks)<br>
 It Was All a Lie - Stuart Stevens - 5H 39M (Book Reserve - Audiobooks)<br>
 Umbrella Academy vol 1 - 5H 43M (Book Reserve - Comic Trades)<br>
@@ -736,7 +737,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
+Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -749,30 +750,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
-Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
+Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
+Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2738H 44M / 114D 2H 44M<br>
+211 queued items: 2744H 21M / 114D 8H 21M<br>
 0 reserve titles are marked as high priority<br>
-25.8% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
-Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 21M / 20D 16H 21M<br>
+Total remaining in queue and reserve: 816 titles - 10105H 41M / 421D 1H 41M<br>
+Average completed per year: 44.6 titles - 496H 12M / 20D 16H 12M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:01.546 (1.546 seconds)<br>
+Total time including file writes: 00:00:01.546 (1.546 seconds)
 </div>
 </body>
 </html>
