--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,132 +7,134 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 09/06/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 09/07/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-115 books<br>
+117 books<br>
  <br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Action Comics 1000 - 4H 58M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Black Panther vol 1 - 4H 28M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Deadpool v Carnage - 3H 44M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Superman vol 4 - 5H 28M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
-Batman vol 8 - 5H 28M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Deadpool too soon - 4H 14M<br>
-Future State Wonder Woman - 6H 13M<br>
-Deadpool v Gambit - 3H 29M<br>
-Super Sons vol 1 - 3H 59M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Detective Comics 1000 - 5H 28M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-Batwoman vol 1 - 5H 13M<br>
 Despicable Deadpool vol 3 - 3H 29M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Absolute Carnage - 6H 13M<br>
-Spider-geddon - 6H 13M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Edge of Venomverse - 3H 29M<br>
-Black Panther vol 2 - 4H 28M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-The Dark Knight Returns - 6H 58M<br>
-X-men Gold vol 1 - 4H 28M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Avengers vol 1 - 4H 58M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Saga vol 4 - 4H 28M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Civil War II - 9H 12M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Spider-Verse - 20H 10M<br>
-Red Hood and the Outlaws vol 1 - 5H 13M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Iron Man Extremis - 4H 58M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Superman vol 3 - 4H 28M<br>
-Bizarro - 4H 28M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Green Lanterns vol 3 - 5H 13M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Spider-man Spider Island - 11H 42M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Justice League Darkseid War - 11H 42M<br>
-DCeased - 6H 58M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Pride of Baghdad - 4H 14M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Lumberjanes - 4H 6M<br>
-Saga vol 5 - 4H 43M<br>
-Marvel Infinity - 18H 25M<br>
 Batman 66 vol 3 - 5H 13M<br>
-Mister Miracle - 9H 57M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Batman vol 9 - 4H 43M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Venomverse - 3H 59M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
 Batman The Doom That Came To Gotham - 5H 28M<br>
+Batman vol 8 - 5H 28M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Batwoman vol 1 - 5H 13M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Marvel Infinity - 18H 25M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Detective Comics 1000 - 5H 28M<br>
+Lumberjanes - 4H 6M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Batman vol 9 - 4H 43M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Bizarro - 4H 28M<br>
+Spider-geddon - 6H 13M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Super Sons vol 1 - 3H 59M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+Civil War II - 9H 12M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Superman vol 4 - 5H 28M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+Action Comics 1000 - 4H 58M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Saga vol 5 - 4H 43M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Deadpool v Carnage - 3H 44M<br>
+Black Panther vol 1 - 4H 28M<br>
+Avengers vol 1 - 4H 58M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
 Batman Damned - 5H 28M<br>
+Superman vol 3 - 4H 28M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+The Dark Knight Returns - 6H 58M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Green Lanterns vol 4 - 3H 59M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Saga vol 6 - 4H 43M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Thanos vol 1 - 4H 14M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Mister Miracle - 9H 57M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Venomverse - 3H 59M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Absolute Carnage - 6H 13M<br>
+Edge of Venomverse - 3H 29M<br>
+Spider-Verse - 20H 10M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Saga vol 4 - 4H 28M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
 Saga vol 3 - 4H 28M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Future State Wonder Woman - 6H 13M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Deadpool too soon - 4H 14M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Justice League Darkseid War - 11H 42M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Iron Man Extremis - 4H 58M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Spider-man Spider Island - 11H 42M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
+DCeased - 6H 58M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Black Panther vol 2 - 4H 28M<br>
+Saga vol 6 - 4H 43M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Deadpool v Gambit - 3H 29M<br>
+Pride of Baghdad - 4H 14M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Thanos vol 1 - 4H 14M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
+Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -145,30 +147,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
-Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
+Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
+Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2738H 44M / 114D 2H 44M<br>
+211 queued items: 2744H 21M / 114D 8H 21M<br>
 0 reserve titles are marked as high priority<br>
-25.8% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
-Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 21M / 20D 16H 21M<br>
+Total remaining in queue and reserve: 816 titles - 10105H 41M / 421D 1H 41M<br>
+Average completed per year: 44.6 titles - 496H 12M / 20D 16H 12M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:01.546 (1.546 seconds)<br>
+Total time including file writes: 00:00:01.546 (1.546 seconds)
 </div>
 </body>
 </html>
