--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 09/06/2021 06:00<br>
+All books sorted by name - 09/07/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1201 books<br>
+1203 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -104,7 +104,7 @@ Astonishing Spider-man & Wolverine - 5H 13M (Book Reserve - Comic Trades)<br>
 Astonishing X-Men Vol 1 Gifted - 4H 43M (Book Reserve - Comic Trades)<br>
 Astrophysics for People in a Hurry - Neil DeGrasse Tyson - 3H 42M (Completed in 2017)<br>
 At the Mountains of Madness - H. P. Lovecraft - 4H 11M (Queue - Current Audiobooks)<br>
-Atomic Habits - James Clear - 5H 36M (Book Reserve - Audiobooks)<br>
+Atomic Habits - James Clear - 5H 36M (Queue - Current Audiobooks)<br>
 Atomic Robo Crystals are Integral - 13H 4M (Book Reserve - Comic Trades)<br>
 Atomic Robo Everything Explodes - 11H 57M (Book Reserve - Comic Trades)<br>
 Attack on Titan 29 - 5H 58M (Completed in 2021)<br>
@@ -588,6 +588,8 @@ Marvel Comics 1000 - 4H 28M (Completed in 2021)<br>
 Marvel Infinity - 18H 25M (Book Reserve - Comic Trades)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Queue - Current Audiobooks)<br>
 Master & Apprentice  (Star Wars) - Claudia Gray - 11H 45M (Queue - Current Audiobooks)<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M (Book Reserve - Comic Trades)<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M (Book Reserve - Comic Trades)<br>
 Memory - Lois McMaster Bujold - 14H 34M (Book Reserve - Audiobooks)<br>
 Men Without Women - Haruki Murakami - 7H 20M (Book Reserve - Audiobooks)<br>
 Midnight in the Garden of Good and Evil - John Berendt - 15H 7M (Completed in 2019)<br>
@@ -1218,7 +1220,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
+Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1231,30 +1233,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
-Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
+Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
+Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2738H 44M / 114D 2H 44M<br>
+211 queued items: 2744H 21M / 114D 8H 21M<br>
 0 reserve titles are marked as high priority<br>
-25.8% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
-Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 21M / 20D 16H 21M<br>
+Total remaining in queue and reserve: 816 titles - 10105H 41M / 421D 1H 41M<br>
+Average completed per year: 44.6 titles - 496H 12M / 20D 16H 12M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:01.546 (1.546 seconds)<br>
+Total time including file writes: 00:00:01.546 (1.546 seconds)
 </div>
 </body>
 </html>
