--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/06/2021 06:00<br>
+Reserved books sorted by folder - 09/07/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 179 books - 2254H 56M / 93D 22H 56M<br>
+Queue - Current Audiobooks : 180 books - 2260H 33M / 94D 4H 33M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -24,6 +24,7 @@ American Moonshot - John F. Kennedy and the Great Space Race - Douglas Brinkley 
 Antifragile - Nassim Nicholas Taleb - 16H 19M<br>
 Arguing with Zombies - Paul Krugman - 12H 18M<br>
 At the Mountains of Madness - H. P. Lovecraft - 4H 11M<br>
+Atomic Habits - James Clear - 5H 36M<br>
 Behave - The Biology of Humans at Our Best and Worst - Robert M. Sapolsky - 26H 34M<br>
 Beyond Order - Jordan B. Peterson - 13H 14M<br>
 Bill Hodges 2 - Finders Keepers - Stephen King - 13H 9M<br>
@@ -256,8 +257,8 @@ Attack on Titan 33 - 5H 58M<br>
 Attack on Titan 34 - 7H 58M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 115 books - 721H 19M / 30D 1H 19M<br>
-Total Comic Trades : 115<br>
+Book Reserve - Comic Trades : 117 books - 730H 44M / 30D 10H 44M<br>
+Total Comic Trades : 117<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -324,6 +325,8 @@ Lobo Portrait of a Bastich - 6H 28M<br>
 Lumberjanes - 4H 6M<br>
 Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
 Marvel Infinity - 18H 25M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
 Mister Miracle - 9H 57M<br>
 Once & Future Vol. 1 - 4H 58M<br>
 Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
@@ -404,7 +407,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 446 books - 6063H 0M / 252D 15H 0M<br>
+Book Reserve - Audiobooks : 445 books - 6057H 23M / 252D 9H 23M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -444,7 +447,6 @@ Artemis Fowl 7 - The Atlantis Complex - 7H 40M<br>
 Artemis Fowl 8 - The Last Guardian - 7H 41M<br>
 Artemisa - Andy Weir - 10H 41M<br>
 Assignment in Eternity - Robert A. Heinlein - 8H 43M<br>
-Atomic Habits - James Clear - 5H 36M<br>
 Aurora - Kim Stanley Robinson - 17H 0M<br>
 Baby Teeth - Zoje Stage - 11H 9M<br>
 Because Internet - Gretchen McCulloch - 8H 2M<br>
@@ -857,7 +859,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2254H 56M / 93D 22H 56M<br>
+Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 54 books - 530H 9M / 22D 2H 9M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -870,30 +872,30 @@ Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 4 books - 25H 52M / 1D 1H 52M<br>
-Book Reserve - Comic Trades - 115 books - 721H 19M / 30D 1H 19M<br>
+Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 446 books - 6063H 0M / 252D 15H 0M<br>
+Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2738H 44M / 114D 2H 44M<br>
+211 queued items: 2744H 21M / 114D 8H 21M<br>
 0 reserve titles are marked as high priority<br>
-25.8% of reserve items are queued<br>
+25.86% of reserve items are queued<br>
  <br>
-All books included in this report: 1201 titles - 14404H 13M / 600D 4H 13M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 387 titles - 4307H 57M / 179D 11H 57M<br>
-Total remaining in queue and reserve: 814 titles - 10096H 16M / 420D 16H 16M<br>
-Average completed per year: 44.6 titles - 496H 21M / 20D 16H 21M<br>
+Total remaining in queue and reserve: 816 titles - 10105H 41M / 421D 1H 41M<br>
+Average completed per year: 44.6 titles - 496H 12M / 20D 16H 12M<br>
 Remaining years of reserve material at average yearly pace: 18.3<br>
-Remaining years of reserve material at current year pace: 10.3<br>
+Remaining years of reserve material at current year pace: 10.5<br>
  <br>
-Total time to process all reports: 00:00:01.537 (1.537 seconds)<br>
-Total time including file writes: 00:00:01.537 (1.537 seconds)
+Total time to process all reports: 00:00:01.546 (1.546 seconds)<br>
+Total time including file writes: 00:00:01.546 (1.546 seconds)
 </div>
 </body>
 </html>
