book and media report content update Thu 09/09/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -62,6 +62,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1562087239l/44300262._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1574377004l/51065933._SX318_SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1583157769l/48722104._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1596737897l/52431850._SX318_.jpg" width="300" >
 </div>
 </body>
 </html>
