--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/08/2021 06:00<br>
+Reserved books sorted by folder - 09/09/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 180 books - 2260H 33M / 94D 4H 33M<br>
@@ -248,10 +248,9 @@ The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Manga : 3 books - 19H 54M / 0D 19H 54M<br>
-Total Comic Trades : 3<br>
+Book Reserve - Manga : 2 books - 13H 56M / 0D 13H 56M<br>
+Total Comic Trades : 2<br>
  <br>
-Attack on Titan 32 - 5H 58M<br>
 Attack on Titan 33 - 5H 58M<br>
 Attack on Titan 34 - 7H 58M<br>
 -----------------------------------------------------<br>
@@ -406,7 +405,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 445 books - 6057H 23M / 252D 9H 23M<br>
+Book Reserve - Audiobooks : 446 books - 6069H 54M / 252D 21H 54M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -828,6 +827,7 @@ Un-Trumping America - Dan Pfeiffer - 6H 22M<br>
 Under the Banner of Heaven - Jon Krakauer - 12H 34M<br>
 Unfinished Tales - J.R.R. Tolkien - 19H 34M<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M<br>
+Walden - Henry David Thoreau - 12H 30M<br>
 Wayfarers 2 - A Closed and Common Orbit - Becky Chambers - 11H 33M<br>
 Wayfarers 3 - Record of a Spaceborn Few - Becky Chambers - 11H 39M<br>
 Wayfarers 4 - The Galaxy, and the Ground Within - Becky Chambers - 9H 58M<br>
@@ -860,7 +860,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 55 books - 536H 7M / 22D 8H 7M<br>
+Completed in 2021 - 56 books - 542H 5M / 22D 14H 5M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -870,10 +870,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 3 books - 19H 54M / 0D 19H 54M<br>
+Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
+Book Reserve - Audiobooks - 446 books - 6069H 54M / 252D 21H 54M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -883,18 +883,18 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 0 reserve titles are marked as high priority<br>
 25.89% of reserve items are queued<br>
  <br>
-All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1204 titles - 14426H 9M / 601D 2H 9M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 388 titles - 4313H 55M / 179D 17H 55M<br>
-Total remaining in queue and reserve: 815 titles - 10099H 43M / 420D 19H 43M<br>
-Average completed per year: 44.7 titles - 496H 44M / 20D 16H 44M<br>
+Total completed since 01/01/2013: 389 titles - 4319H 53M / 179D 23H 53M<br>
+Total remaining in queue and reserve: 815 titles - 10106H 15M / 421D 2H 15M<br>
+Average completed per year: 44.8 titles - 497H 16M / 20D 17H 16M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
-Total time including file writes: 00:00:01.588 (1.588 seconds)
+Total time to process all reports: 00:00:01.989 (1.989 seconds)<br>
+Total time including file writes: 00:00:01.989 (1.989 seconds)
 </div>
 </body>
 </html>
