--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 09/08/2021 06:00<br>
+Reserved books sorted by name - 09/09/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 815 books<br>
@@ -75,7 +75,6 @@ At the Mountains of Madness - H. P. Lovecraft - 4H 11M (Queue - Current Audioboo
 Atomic Habits - James Clear - 5H 36M (Queue - Current Audiobooks)<br>
 Atomic Robo Crystals are Integral - 13H 4M (Book Reserve - Comic Trades)<br>
 Atomic Robo Everything Explodes - 11H 57M (Book Reserve - Comic Trades)<br>
-Attack on Titan 32 - 5H 58M (Book Reserve - Manga)<br>
 Attack on Titan 33 - 5H 58M (Book Reserve - Manga)<br>
 Attack on Titan 34 - 7H 58M (Book Reserve - Manga)<br>
 Aurora - Kim Stanley Robinson - 17H 0M (Book Reserve - Audiobooks)<br>
@@ -783,6 +782,7 @@ VALIS - Philip K Dick - 8H 44M (Book Reserve - Audiobooks (Need new source))<br>
 Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M (Book Reserve - Audiobooks)<br>
 VocabuLearn® German Complete - 9H 2M (Queue - Current Audiobooks)<br>
+Walden - Henry David Thoreau - 12H 30M (Book Reserve - Audiobooks)<br>
 War Machine - Volume 1 Iron Heart - 4H 14M (Book Reserve - Comic Trades)<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M (Book Reserve - Audiobooks (Need new source))<br>
 Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M (Queue - Current Audiobooks)<br>
@@ -834,7 +834,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 180 books - 2260H 33M / 94D 4H 33M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 55 books - 536H 7M / 22D 8H 7M<br>
+Completed in 2021 - 56 books - 542H 5M / 22D 14H 5M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -844,10 +844,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 3 books - 19H 54M / 0D 19H 54M<br>
+Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6057H 23M / 252D 9H 23M<br>
+Book Reserve - Audiobooks - 446 books - 6069H 54M / 252D 21H 54M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -857,18 +857,18 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 0 reserve titles are marked as high priority<br>
 25.89% of reserve items are queued<br>
  <br>
-All books included in this report: 1203 titles - 14413H 38M / 600D 13H 38M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1204 titles - 14426H 9M / 601D 2H 9M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 388 titles - 4313H 55M / 179D 17H 55M<br>
-Total remaining in queue and reserve: 815 titles - 10099H 43M / 420D 19H 43M<br>
-Average completed per year: 44.7 titles - 496H 44M / 20D 16H 44M<br>
+Total completed since 01/01/2013: 389 titles - 4319H 53M / 179D 23H 53M<br>
+Total remaining in queue and reserve: 815 titles - 10106H 15M / 421D 2H 15M<br>
+Average completed per year: 44.8 titles - 497H 16M / 20D 17H 16M<br>
 Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.2<br>
+Remaining years of reserve material at current year pace: 10.1<br>
  <br>
-Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
-Total time including file writes: 00:00:01.588 (1.588 seconds)
+Total time to process all reports: 00:00:01.989 (1.989 seconds)<br>
+Total time including file writes: 00:00:01.989 (1.989 seconds)
 </div>
 </body>
 </html>
